--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
 #        show_sql: true # System.out 출력
         format_sql: true # System.out 출력
+#        use_sql_comments: true
 
 logging.level:
   org.hibernate.SQL: debug
